# ghost

./: .gitignore  Makefile.am  README  README.md  configure.ac  rules.txt
src/: Makefile.am  ghost  ghost.c  ghost.h  ghost_data.c  ghost_data.h  ghost_parser.c  ghost_parser.h  main.c
tests/: Makefile.am  check_ghost_data  check_ghost_data.c  check_ghost_parser  check_ghost_parser.c
